--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Build
       run: go build -v ./...
 
+    - name: Go report card
+      uses: creekorful/goreportcard-action@v1.0
+      
 # needs mysql db setup to run without failures
 #    - name: Test
 #      run: go test -v ./...
